# astra-spec

./: .copier-answers.yml  .gitignore  CITATION.cff  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  config.public.mk  justfile  mkdocs.yml  netlify.toml  pyproject.toml  vercel.json  versions.json  zensical.toml
.github/ISSUE_TEMPLATE/: rfc_proposal.yml
.github/workflows/: dco.yml  deploy-docs-on-tag.yaml  deploy-docs.yaml  main.yaml  pypi-publish.yaml  test_pages_build.yaml
0.0.10/: 404.html  index.html  search.json  sitemap.xml
0.0.10/about/: index.html
0.0.10/cli/: index.html
0.0.10/community/: index.html
0.0.10/elements/: index.html
0.0.10/getting-started/: index.html
0.0.10/governance/: index.html
0.0.10/rfc-process/: index.html
0.0.10/schema/: astra.context.jsonld  astra.yaml
0.0.10/specification/: index.html
0.0.11/: 404.html  index.html  search.json  sitemap.xml
0.0.11/about/: index.html
0.0.11/cli/: index.html
0.0.11/community/: index.html
0.0.11/elements/: index.html
0.0.11/getting-started/: index.html
0.0.11/governance/: index.html
0.0.11/rfc-process/: index.html
0.0.11/schema/: astra.context.jsonld  astra.yaml
0.0.11/specification/: index.html
0.0.8/: 404.html  index.html  search.json  sitemap.xml
0.0.8/about/: index.html
0.0.8/cli/: index.html
0.0.8/community/: index.html
0.0.8/elements/: index.html
0.0.8/getting-started/: index.html
0.0.8/schema/: astra.context.jsonld  astra.yaml
0.0.8/specification/: index.html
0.0.9/: 404.html  index.html  search.json  sitemap.xml
0.0.9/about/: index.html
0.0.9/cli/: index.html
0.0.9/community/: index.html
0.0.9/elements/: index.html
0.0.9/getting-started/: index.html
0.0.9/schema/: astra.context.jsonld  astra.schema.json  astra.yaml
0.0.9/specification/: index.html
docs/: about.md  cli.md  community.md  getting-started.md  governance.md  index.md  rfc-process.md  specification.md
docs/schema/: astra.context.jsonld  astra.schema.json  astra.yaml
docs/specification/: index.md
elements/: index.html
elements/ASTRA/: index.html
elements/Analysis/: index.html
elements/Boolean/: index.html
elements/ContainerBuildSpec/: index.html
elements/Curie/: index.html
elements/Date/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/Decimal/: index.html
elements/Decision/: index.html
elements/DecisionSelection/: index.html
elements/Double/: index.html
elements/Evidence/: index.html
elements/Float/: index.html
elements/FragmentSelector/: index.html
elements/Input/: index.html
elements/InputType/: index.html
elements/Insight/: index.html
elements/InsightCollection/: index.html
elements/Integer/: index.html
elements/Jsonpath/: index.html
elements/Jsonpointer/: index.html
elements/KeyValuePair/: index.html
elements/Ncname/: index.html
elements/Nodeidentifier/: index.html
elements/Objectidentifier/: index.html
elements/Option/: index.html
elements/Output/: index.html
elements/OutputType/: index.html
elements/Recipe/: index.html
elements/Resources/: index.html
elements/Sparqlpath/: index.html
elements/String/: index.html
elements/TextQuoteSelector/: index.html
elements/Time/: index.html
elements/Universe/: index.html
elements/UniverseNode/: index.html
elements/Uri/: index.html
elements/Uriorcurie/: index.html
elements/analyses/: index.html
elements/args/: index.html
elements/artifact/: index.html
elements/authors/: index.html
elements/claim/: index.html
elements/command/: index.html
elements/container/: index.html
elements/container_build/: index.html
elements/context/: index.html
elements/cpus/: index.html
elements/created_at/: index.html
elements/decision_id/: index.html
elements/decisions/: index.html
elements/default/: index.html
elements/derived/: index.html
elements/description/: index.html
elements/doi/: index.html
elements/evidence/: index.html
elements/exact/: index.html
elements/excluded/: index.html
elements/excluded_reason/: index.html
elements/findings/: index.html
elements/from_ref/: index.html
elements/gpus/: index.html
elements/id/: index.html
elements/incompatible_with/: index.html
elements/inputs/: index.html
elements/insights/: index.html
elements/key/: index.html
elements/label/: index.html
elements/location/: index.html
elements/memory/: index.html
elements/name/: index.html
elements/notes/: index.html
elements/option_id/: index.html
elements/options/: index.html
elements/outputs/: index.html
elements/page/: index.html
elements/path/: index.html
elements/prefix/: index.html
elements/prior_insights/: index.html
elements/quote/: index.html
elements/rationale/: index.html
elements/recipe/: index.html
elements/ref/: index.html
elements/ref_version/: index.html
elements/requires/: index.html
elements/tags/: index.html
examples/: README.md
rfcs/: 0000-template.md  0001-establish-the-rfc-process.md  0002-decouple-reports.md  0002-myst-reports.md  README.md
schema/: astra.yaml
scripts/: postgen.py
search/: search_index.json
tests/: __init__.py  test_data.py
(+1967 files in other folders)
