[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "astra-spec"
description = "ASTRA — Agentic Schema for Transparent Research Analysis: a declarative YAML format for reproducible, auditable, and composable scientific analyses."
readme = "README.md"
authors = [
  {name = "Francois Lanusse", email = "francois.lanusse@cnrs.fr"},
  {name = "Liam Parker", email = "lhparker@berkeley.edu"},
]
maintainers = [
  {name = "Francois Lanusse", email = "francois.lanusse@cnrs.fr"},
  {name = "Liam Parker", email = "lhparker@berkeley.edu"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.9,<4.0"
dynamic = ["version"]
keywords = [
  "astra",
  "linkml",
  "schema",
  "reproducibility",
  "open-science",
  "scientific-analysis",
  "agentic-ai",
  "declarative",
  "yaml",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "linkml-runtime >=1.9.4",
]

[project.urls]
Homepage = "https://astra-spec.org"
Documentation = "https://astra-spec.org"
Repository = "https://github.com/LightconeResearch/astra-spec"
Issues = "https://github.com/LightconeResearch/astra-spec/issues"
Changelog = "https://github.com/LightconeResearch/astra-spec/releases"
"Source Code" = "https://github.com/LightconeResearch/astra-spec"

[dependency-groups]
dev = [
    "linkml>=1.9.3",
]
docs = [
    "zensical>=0.0.33; python_version >= '3.10'",
    "ghp-import>=2",
]

[tool.hatch.build.targets.sdist]
include = [
  "/src/astra",
  "/pyproject.toml",
  "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/astra"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

# Ref.: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["tests"]

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/astra/datamodel/astra_pydantic.py",
  "src/astra/datamodel/astra.py",
]

# Reminder: words have to be lowercased for the ignore-words-list
ignore-words-list = "linke"
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "project/*",
  "src/astra/datamodel/astra_pydantic.py",
  "src/astra/datamodel/astra.py",
]
